name:           flush-queue
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/lehins/flush-queue#readme>
homepage:       https://github.com/lehins/flush-queue#readme
bug-reports:    https://github.com/lehins/flush-queue/issues
author:         Alexey Kuleshevich
maintainer:     alexey@kuleshevi.ch
copyright:      2018 Alexey Kuleshevich
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/lehins/flush-queue

library
  exposed-modules: Control.Concurrent.BFQueue
                   Control.Concurrent.STM.TBFQueue
  other-modules: Control.Concurrent.BList
  hs-source-dirs:
      src
  build-depends: base >=4.7 && <5
               , stm
               , atomic-primops
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: Control.Concurrent.BFQueueSpec
               , Control.Concurrent.STM.TBFQueueSpec
  hs-source-dirs:
      test
  ghc-options:  -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >=4.7 && <5
               , async
               , stm
               , flush-queue
               , QuickCheck
               , hspec
  default-language: Haskell2010

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Benchmark.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stm
                     , async
                     , flush-queue
                     , old-time
                     , deepseq
  default-language:    Haskell2010
